[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'torchutils'
version = '0.0.1'
dependencies = [
    'torch==2.3.0',
    'torchvision==0.18.0',
]
authors = [
    {name = 'Chuan-Heng Hsiao', email = 'hsiao.chuanheng@gmail.com'},
]
description = ''
readme = 'README.md'
license = {file = 'LICENSE.txt'}
keywords = [
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]

[project.urls]
# Homepage      = ""
# Documentation = ""
# Repository    = ""
# "Bug Tracker" = ""
# Changelog = ""

[project.scripts]

[tool.setuptools.packages.find]
exclude = [
    'tests*',
]
